2008-06-13 Albert Chu <chu11@llnl.gov>

	* common/src/tool-common.c (ipmi_open): Add/fix conditions under
	which "nice" error message output occurs.
	
2008-06-08 Albert Chu <chu11@llnl.gov>

	* common/src/tool-sdr-cache-common.c (_get_home_directory): Fix
	getpwuid_r usage.

	* configure.ac: Fix getpwuid_r detection.
	
2008-06-07 Albert Chu <chu11@llnl.gov>

	Port for Solaris.

	* README.argp: New file.

	* common/src/freeipmi-portability.h,
	common/src/freeipmi-portability.c: Handle mempcpy and strchrnul
	portability.

	* config/ac_lsh_gcc_attributes.m4: New file.

	* common/src/freeipmi-argp.h
	common/src/freeipmi-argp-ba.c
	common/src/freeipmi-argp-eexst.c
	common/src/freeipmi-argp-fmtstream.c
	common/src/freeipmi-argp-fmtstream.h
	common/src/freeipmi-argp-help.c
	common/src/freeipmi-argp-namefrob.h
	common/src/freeipmi-argp-parse.c
	common/src/freeipmi-argp-pv.c
	common/src/freeipmi-argp-pvh.c: New files.

	* common/src/Makefile.am: Update for libfreeipmiportability for
	new freeipmi-argp lib.

	* configure.ac: Update with lib argp checking and argp.h.

	* Update all tools and libraries to load argp.h or freeipmi-argp.h
	respectively.

	* Update all Makefile's to include libfreeipmiportability as
	needed.

	* Include alloca.h in all files as needed.

	* common/src/pstdout.c: Rename internal variables stdout and
	stderr to p_stdout and p_stderr as needed.

	* configure.ac: Add sys/sockio.h check.

	* common/src/ipmi-ping.c: Include sys/sockio.h.

	* configure.ac: Check for 5 vs 4 argument getpwuid_r.

	* common/src/tool-sdr-cache-common.c (_get_home_directory): Use 5
	or 4 argument getpwuid_r appropriately.

	* Globally remove "-x c" and "-o" options from cpp lines.

	* configure.ac: Search for cpp.

	* Globally change 'cpp' call to $(CPP).

	* Remove default -Wall compilation.

	* Cleanup Makefiles for portable use.

	* configure.ac, libfreeipmi/src/driver/ipmi-openipmi-driver.c:
	Check and load sys/ioccom.h as needed.
