@@ -1,3 +1,11 @@
+2008-XX-XX Albert Chu <chu11@llnl.gov>
+
+	Support hostranges on bmc-config, ipmi-sensors-config, and pef-config.
+
+	* bmc-config/bmc-config.8.pre.in,
+	ipmi-sensors-config/ipmi-sensors-config.8.pre.in,
+	pef-config/pef-config.8.pre.in: Update appropriately for all changes.
+	
 2008-06-13 Albert Chu <chu11@llnl.gov>
 
 	* common/src/tool-common.c (ipmi_open): Add/fix conditions under
